18_reverse_str/grade.txt
Grading at Fri Feb 15 18:16:07 UTC 2019
Attempting to compile  reverse.c
reverse.c: In function ‘reverse’:
reverse.c:11:3: error: expected ‘,’ or ‘;’ before ‘if’
   if (str == NULL) {
   ^
reverse.c:14:3: error: ‘else’ without a previous ‘if’
   else {
   ^
The code did not compile!

Overall Grade: F
